--- a/research/notebooks/ModelProtopying.ipynb
+++ b/research/notebooks/ModelProtopying.ipynb
@@ -9,13 +9,17 @@
     "import os\n",
     "import cv2\n",
     "import yaml\n",
+    "import torch\n",
     "import joblib\n",
     "import zipfile\n",
     "import pandas as pd\n",
+    "import torch.nn as nn\n",
     "from tqdm import tqdm\n",
     "from PIL import Image\n",
     "import matplotlib.pyplot as plt\n",
     "from torchvision import transforms\n",
+    "from torchview import draw_graph\n",
+    "from torchsummary import summary\n",
     "from torch.utils.data import DataLoader\n",
     "from sklearn.model_selection import train_test_split"
    ]
@@ -245,6 +249,220 @@
     "    loader.plot_images()\n",
     "    loader.dataset_details()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Create the Generator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import OrderedDict\n",
+    "\n",
+    "class Encoder(nn.Module):\n",
+    "    def __init__(self, in_channels = 3, out_channels = 64, use_batch_norm = True):\n",
+    "        super(Encoder, self).__init__()\n",
+    "\n",
+    "        self.in_channels = in_channels\n",
+    "        self.out_channels = out_channels\n",
+    "        self.batch_norm = use_batch_norm\n",
+    "\n",
+    "        self.kernel = 4\n",
+    "        self.stride = 2\n",
+    "        self.padding = 1\n",
+    "\n",
+    "        self.encoder = self.block()\n",
+    "\n",
+    "    def block(self):\n",
+    "        layers = OrderedDict()\n",
+    "\n",
+    "        layers[\"conv\"] = nn.Sequential(\n",
+    "            nn.Conv2d(\n",
+    "                in_channels=self.in_channels,\n",
+    "                out_channels=self.out_channels,\n",
+    "                kernel_size=self.kernel,\n",
+    "                stride=self.stride,\n",
+    "                padding=self.padding\n",
+    "            )\n",
+    "        )\n",
+    "\n",
+    "        layers[\"leaky_relu\"] = nn.LeakyReLU(negative_slope=0.2, inplace=True)\n",
+    "        \n",
+    "        if self.batch_norm:\n",
+    "            layers[\"batch_norm\"] = nn.BatchNorm2d(num_features=self.out_channels)\n",
+    "        \n",
+    "        return nn.Sequential(layers)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        if isinstance(x, torch.Tensor):\n",
+    "            return self.encoder(x)\n",
+    "\n",
+    "        else:\n",
+    "            raise Exception(\"Please provide the tensor for further process\".capitalize())\n",
+    "        \n",
+    "    @staticmethod\n",
+    "    def total_params(model):\n",
+    "        if isinstance(model, Encoder):\n",
+    "            return sum(p.numel() for p in model.parameters() if p.requires_grad)\n",
+    "        \n",
+    "        else:\n",
+    "            raise Exception(\"Please provide the model for further process\".capitalize())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Decoder(nn.Module):\n",
+    "    def __init__(self, in_channels = 512, out_channels = 512):\n",
+    "        super(Decoder, self).__init__()\n",
+    "\n",
+    "        self.in_channels = in_channels\n",
+    "        self.out_channels = out_channels\n",
+    "\n",
+    "        self.kernel = 4\n",
+    "        self.stride = 2\n",
+    "        self.padding = 1\n",
+    "\n",
+    "        self.decoder = self.block()\n",
+    "        \n",
+    "    def block(self):\n",
+    "        layers = OrderedDict()\n",
+    "\n",
+    "        layers[\"deconv\"] = nn.Sequential(\n",
+    "            nn.ConvTranspose2d(\n",
+    "                in_channels=self.in_channels,\n",
+    "                out_channels=self.out_channels,\n",
+    "                kernel_size=self.kernel,\n",
+    "                stride=self.stride,\n",
+    "                padding=self.padding\n",
+    "            )\n",
+    "        )\n",
+    "\n",
+    "        layers[\"relu\"] = nn.ReLU(inplace=True)\n",
+    "        layers[\"batch_norm\"] = nn.BatchNorm2d(num_features=self.out_channels)\n",
+    "\n",
+    "        return nn.Sequential(layers)\n",
+    "    \n",
+    "    def forward(self, x, skip_info):\n",
+    "        if isinstance(x, torch.Tensor):\n",
+    "            x =  self.decoder(x)\n",
+    "            return torch.concat((x, skip_info), dim=1)\n",
+    "\n",
+    "        else:\n",
+    "            raise Exception(\"Please provide the tensor for further process\".capitalize())\n",
+    "        \n",
+    "    @staticmethod\n",
+    "    def total_params(model):\n",
+    "        if isinstance(model, Decoder):\n",
+    "            return sum(p.numel() for p in model.parameters() if p.requires_grad)\n",
+    "        \n",
+    "        else:\n",
+    "            raise Exception(\"Please provide the model for further process\".capitalize())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Generator(nn.Module):\n",
+    "    def __init__(self, in_channels = 3):\n",
+    "        super(Generator, self).__init__()\n",
+    "        \n",
+    "        self.in_channels = in_channels\n",
+    "        self.out_channels = 64\n",
+    "        self.kernel = 4\n",
+    "        self.stride = 2\n",
+    "        self.padding = 1\n",
+    "        \n",
+    "        self.encoder1 = Encoder(in_channels=self.in_channels, out_channels = self.out_channels)\n",
+    "        self.encoder2 = Encoder(in_channels=self.out_channels, out_channels = self.out_channels*2)\n",
+    "        self.encoder3 = Encoder(in_channels=self.out_channels*2, out_channels=self.out_channels*4)\n",
+    "        self.encoder4 = Encoder(in_channels=self.out_channels*4, out_channels=self.out_channels*8)\n",
+    "        self.encoder5 = Encoder(in_channels=self.out_channels*8, out_channels=self.out_channels*8)\n",
+    "        self.encoder6 = Encoder(in_channels=self.out_channels*8, out_channels=self.out_channels*8)\n",
+    "        self.encoder7 = Encoder(in_channels=self.out_channels*8, out_channels=self.out_channels*8)\n",
+    "        \n",
+    "        self.decoder1 = Decoder(in_channels=self.out_channels*8, out_channels=self.out_channels*8)\n",
+    "        self.decoder2 = Decoder(in_channels=self.out_channels*8*2, out_channels=self.out_channels*8)\n",
+    "        self.decoder3 = Decoder(in_channels=self.out_channels*8*2, out_channels=self.out_channels*8)\n",
+    "        self.decoder4 = Decoder(in_channels=self.out_channels*8*2, out_channels=self.out_channels*4)\n",
+    "        self.decoder5 = Decoder(in_channels=self.out_channels*4*2, out_channels=self.out_channels*2)\n",
+    "        self.decoder6 = Decoder(in_channels=self.out_channels*2*2, out_channels=self.out_channels)\n",
+    "        \n",
+    "        self.output = nn.Sequential(\n",
+    "            nn.ConvTranspose2d(\n",
+    "                in_channels=128,\n",
+    "                out_channels=3,\n",
+    "                kernel_size=self.kernel,\n",
+    "                stride=self.stride,\n",
+    "                padding=self.padding\n",
+    "            ),\n",
+    "            nn.Tanh()\n",
+    "        )\n",
+    "        \n",
+    "    def forward(self, x):\n",
+    "        if isinstance(x, torch.Tensor):\n",
+    "            encoder1 = self.encoder1(x)\n",
+    "            encoder2 = self.encoder2(encoder1)\n",
+    "            encoder3 = self.encoder3(encoder2)\n",
+    "            encoder4 = self.encoder4(encoder3)\n",
+    "            encoder5 = self.encoder5(encoder4)\n",
+    "            encoder6 = self.encoder6(encoder5)\n",
+    "            encoder7 = self.encoder7(encoder6)\n",
+    "            \n",
+    "            decoder1 = self.decoder1(encoder7, encoder6)\n",
+    "            decoder2 = self.decoder2(decoder1, encoder5)\n",
+    "            decoder3 = self.decoder3(decoder2, encoder4)\n",
+    "            decoder4 = self.decoder4(decoder3, encoder3)\n",
+    "            decoder5 = self.decoder5(decoder4, encoder2)\n",
+    "            decoder6 = self.decoder6(decoder5, encoder1)\n",
+    "            output = self.output(decoder6)\n",
+    "            \n",
+    "            return output\n",
+    "        \n",
+    "        else:\n",
+    "            raise Exception(\"Please provide the tensor for further process\".capitalize())\n",
+    "        \n",
+    "    @staticmethod\n",
+    "    def total_params(model):\n",
+    "        if isinstance(model, Generator):\n",
+    "            return sum(p.numel() for p in model.parameters())\n",
+    "        \n",
+    "        else:\n",
+    "            raise Exception(\"Please provide the tensor for further process\".capitalize())\n",
+    "        \n",
+    "        \n",
+    "if __name__ == \"__main__\":\n",
+    "    in_channels = 3\n",
+    "    netG = Generator(in_channels=in_channels)\n",
+    "    \n",
+    "    summary(model=netG, input_size=(3, 256, 256))\n",
+    "    \n",
+    "    config_files = config()\n",
+    "    files_path = config_files[\"path\"][\"files_path\"]\n",
+    "    \n",
+    "    draw_graph(model=netG, input_data=torch.randn(1, 3, 256, 256)).visual_graph.render(\n",
+    "        filename=os.path.join(files_path, \"netG\"), format=\"png\" if os.path.exists(files_path) else \"Cannot saved the netG model architecture\".capitalize()\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
