--- a/research/notebooks/ModelProtopying.ipynb
+++ b/research/notebooks/ModelProtopying.ipynb
@@ -17,6 +17,7 @@
     "from tqdm import tqdm\n",
     "from PIL import Image\n",
     "import matplotlib.pyplot as plt\n",
+    "from collections import OrderedDict\n",
     "from torchvision import transforms\n",
     "from torchview import draw_graph\n",
     "from torchsummary import summary\n",
@@ -454,6 +455,128 @@
     "    \n",
     "    draw_graph(model=netG, input_data=torch.randn(1, 3, 256, 256)).visual_graph.render(\n",
     "        filename=os.path.join(files_path, \"netG\"), format=\"png\" if os.path.exists(files_path) else \"Cannot saved the netG model architecture\".capitalize()\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Discriminator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class DiscriminatorBlock(nn.Module):\n",
+    "    def __init__(self, in_channels = 3, out_channels = 64, use_batch_norm = False):\n",
+    "        super(DiscriminatorBlock, self).__init__()\n",
+    "\n",
+    "        self.in_channels = in_channels\n",
+    "        self.out_channels = out_channels\n",
+    "        self.batch_norm = use_batch_norm\n",
+    "\n",
+    "        self.kernel = 4\n",
+    "        self.stride = 2\n",
+    "        self.padding = 1\n",
+    "\n",
+    "        self.discriminator = self.block()\n",
+    "        \n",
+    "    def block(self):\n",
+    "        layers = OrderedDict()\n",
+    "        \n",
+    "        layers[\"conv\"] = nn.Sequential(\n",
+    "            nn.Conv2d(\n",
+    "                in_channels=self.in_channels,\n",
+    "                out_channels=self.out_channels,\n",
+    "                kernel_size=self.kernel,\n",
+    "                stride=self.stride,\n",
+    "                padding=self.padding\n",
+    "                \n",
+    "            )\n",
+    "        )\n",
+    "        \n",
+    "        if self.batch_norm:\n",
+    "            layers[\"batch_norm\"] = nn.BatchNorm2d(num_features=self.out_channels)\n",
+    "        \n",
+    "        layers[\"leaky_ReLU\"] = nn.LeakyReLU(negative_slope=0.2, inplace=True)\n",
+    "        \n",
+    "        return nn.Sequential(layers)\n",
+    "    \n",
+    "    def forward(self, x):\n",
+    "        if isinstance(x, torch.Tensor):\n",
+    "            return self.discriminator(x)\n",
+    "        \n",
+    "        else:\n",
+    "            raise Exception(\"Please provide the tensor for further process\".capitalize())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Discriminator(nn.Module):\n",
+    "    def __init__(self, in_channels = 3):\n",
+    "        super(Discriminator, self).__init__()\n",
+    "        \n",
+    "        self.in_channels = in_channels\n",
+    "        self.out_channels = 64\n",
+    "        \n",
+    "        self.layers = []\n",
+    "        \n",
+    "        for idx in range(3):\n",
+    "            self.layers.append(\n",
+    "                DiscriminatorBlock(in_channels=self.in_channels, out_channels=self.out_channels, use_batch_norm=False if idx == 0 else True)\n",
+    "            )\n",
+    "            self.in_channels = self.out_channels\n",
+    "            self.out_channels *= 2\n",
+    "            \n",
+    "        self.block = nn.Sequential(*self.layers)\n",
+    "        \n",
+    "        self.output = nn.Sequential(\n",
+    "            nn.ZeroPad2d((1, 0, 1, 0)),\n",
+    "            nn.Conv2d(\n",
+    "                in_channels=self.in_channels,\n",
+    "                out_channels=1,\n",
+    "                kernel_size=4,\n",
+    "                stride=1,\n",
+    "                padding=0\n",
+    "            )\n",
+    "        )\n",
+    "        \n",
+    "    def forward(self, x):\n",
+    "        if isinstance(x, torch.Tensor):\n",
+    "            return self.output(self.block(x))\n",
+    "        \n",
+    "        else:\n",
+    "            raise Exception(\"Please provide the tensor for further process\".capitalize())\n",
+    "        \n",
+    "    @staticmethod\n",
+    "    def total_params(model = None):\n",
+    "        if isinstance(model, Discriminator):\n",
+    "            return sum(p.numel() for p in model.parameters())\n",
+    "        \n",
+    "        else:\n",
+    "            raise Exception(\"Please provide the model for further process\".capitalize())\n",
+    "        \n",
+    "        \n",
+    "if __name__ == \"__main__\":\n",
+    "    in_channels = 3\n",
+    "    config_files = config()\n",
+    "    \n",
+    "    netD = Discriminator(in_channels=in_channels)\n",
+    "    \n",
+    "    assert netD(torch.randn(1, 3, 256, 256)).size() == (1, 1, 30, 30)\n",
+    "    \n",
+    "    summary(model=netD, input_size=(3, 256, 256))\n",
+    "    \n",
+    "    draw_graph(model=netD, input_data=torch.randn(1, 3, 256, 256)).visual_graph.render(\n",
+    "        filename=os.path.join(config_files[\"path\"][\"files_path\"], \"netD\"), format=\"png\" if config_files[\"path\"][\"files_path\"] else \"Cannot be saved netD file\".capitalize()\n",
     "    )"
    ]
   },
