cycle loss is added #20

--- a/research/notebooks/ModelProtopying.ipynb
+++ b/research/notebooks/ModelProtopying.ipynb
@@ -581,6 +581,44 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Define loss"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class CycleLoss(nn.Module):\n",
+    "    def __init__(self, reduction=\"mean\"):\n",
+    "        super(CycleLoss, self).__init__()\n",
+    "\n",
+    "        self.name = \"CycleLoss\".title()\n",
+    "        self.reduction = reduction\n",
+    "\n",
+    "        self.loss = nn.L1Loss(reduction=self.reduction)\n",
+    "\n",
+    "    def forward(self, actual, pred):\n",
+    "        if isinstance(actual, torch.Tensor) and isinstance(pred, torch.Tensor):\n",
+    "            return self.loss(actual, pred)\n",
+    "        else:\n",
+    "            raise TypeError(\"Inputs must be torch.Tensor\".capitalize())\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    loss = CycleLoss()\n",
+    "    \n",
+    "    actual = torch.tensor([1.0, 0.0, 1.0, 1.0])\n",
+    "    predicted = torch.tensor([0.0, 1.0, 0.0, 0.0])\n",
+    "    \n",
+    "    print(\"The loss {}\".format(loss(actual, predicted)))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
