--- a/research/notebooks/ModelProtopying.ipynb
+++ b/research/notebooks/ModelProtopying.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,11 +37,22 @@
     "        \n",
     "    else:\n",
     "        raise Exception(\"Please provide the value and filename to dump\".capitalize())\n",
-    "    \n",
-    "    \n",
+    "\n",
+    "\n",
     "def load(filename):\n",
     "    if filename is not None:\n",
-    "        return joblib.load(filename = filename)"
+    "        return joblib.load(filename = filename)\n",
+    "\n",
+    "\n",
+    "def device_init(device=\"mps\"):\n",
+    "    if device == \"mps\":\n",
+    "        return torch.device(\"mps\" if torch.backends.mps.is_available() else \"cpu\")\n",
+    "\n",
+    "    elif device == \"cuda\":\n",
+    "        return torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "\n",
+    "    else:\n",
+    "        return torch.device(\"cuda\")"
    ]
   },
   {
@@ -623,7 +634,66 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class GradientPenalty(nn.Module):\n",
+    "    def __init__(self, in_channels=3, batch_size=1, device=\"mps\"):\n",
+    "        super(GradientPenalty, self).__init__()\n",
+    "\n",
+    "        self.in_channels = in_channels\n",
+    "        self.batch_size = batch_size\n",
+    "        self.device = device\n",
+    "\n",
+    "        self.device = device_init(device=self.device)\n",
+    "\n",
+    "        self.alpha = torch.randn(\n",
+    "            self.batch_size, self.in_channels // self.in_channels, 1, 1\n",
+    "        )\n",
+    "\n",
+    "    def forward(self, netD, X, y):\n",
+    "        if (\n",
+    "            isinstance(netD, Discriminator)\n",
+    "            and isinstance(X, torch.Tensor)\n",
+    "            and isinstance(y, torch.Tensor)\n",
+    "        ):\n",
+    "            interpolated = (self.alpha * X) + ((1 - self.alpha) * y)\n",
+    "            interpolated = interpolated.requires_grad_(True)\n",
+    "\n",
+    "            netD = netD.to(self.device)\n",
+    "\n",
+    "            d_interpolated = netD(interpolated.to(self.device))\n",
+    "\n",
+    "            gradients = torch.autograd.grad(\n",
+    "                outputs=d_interpolated,\n",
+    "                inputs=interpolated,\n",
+    "                grad_outputs=torch.ones_like(d_interpolated).to(self.device),\n",
+    "                create_graph=True,\n",
+    "                retain_graph=True,\n",
+    "            )[0]\n",
+    "\n",
+    "            gradients = gradients.view(gradients.size(0), -1)\n",
+    "            gradients = torch.norm(gradients, 2, dim=1)\n",
+    "\n",
+    "            return ((gradients - 1) ** 2).mean()\n",
+    "\n",
+    "        else:\n",
+    "            raise TypeError(\"Inputs must be torch.Tensor\".capitalize())\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    batch_size = 1\n",
+    "    device = device_init(device=\"mps\")\n",
+    "    \n",
+    "    netD = Discriminator(in_channels=in_channels)\n",
+    "\n",
+    "    X = torch.randn(1, 3, 256, 256)\n",
+    "    y = torch.randn(1, 3, 256, 256)\n",
+    "\n",
+    "    grad_penalty = GradientPenalty(\n",
+    "        in_channels=in_channels, batch_size=batch_size, device=device\n",
+    "    )\n",
+    "\n",
+    "    print(grad_penalty(netD, X, y))"
+   ]
   }
  ],
  "metadata": {
