helpers method is added #24

--- a/research/notebooks/ModelProtopying.ipynb
+++ b/research/notebooks/ModelProtopying.ipynb
@@ -16,6 +16,7 @@
     "import torch.nn as nn\n",
     "from tqdm import tqdm\n",
     "from PIL import Image\n",
+    "import torch.optim as optim\n",
     "import matplotlib.pyplot as plt\n",
     "from collections import OrderedDict\n",
     "from torchvision import transforms\n",
@@ -693,6 +694,131 @@
     "    )\n",
     "\n",
     "    print(grad_penalty(netD, X, y))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Helper"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_dataloader():\n",
+    "    config_files = config()\n",
+    "    dataloader_path = config_files[\"path\"][\"processed_path\"]\n",
+    "\n",
+    "    if os.path.exists(dataloader_path):\n",
+    "        train_dataloader = load(\n",
+    "            filename=os.path.join(dataloader_path, \"train_dataloader.pkl\")\n",
+    "        )\n",
+    "        test_dataloader = load(\n",
+    "            filename=os.path.join(dataloader_path, \"test_dataloader.pkl\")\n",
+    "        )\n",
+    "\n",
+    "        return {\n",
+    "            \"train_dataloader\": train_dataloader,\n",
+    "            \"test_dataloader\": test_dataloader,\n",
+    "        }\n",
+    "\n",
+    "    else:\n",
+    "        raise Exception(\"Cannot load the dataloader for further process\".capitalize())\n",
+    "\n",
+    "\n",
+    "def helpers(**kwargs):\n",
+    "    in_channels = kwargs[\"in_channels\"]\n",
+    "    lr = kwargs[\"lr\"]\n",
+    "    adam = kwargs[\"adam\"]\n",
+    "    SGD = kwargs[\"SGD\"]\n",
+    "    device = kwargs[\"device\"]\n",
+    "\n",
+    "    netG_XtoY = Generator(in_channels=in_channels)\n",
+    "    netG_YtoX = Generator(in_channels=in_channels)\n",
+    "\n",
+    "    netD_X = Discriminator(in_channels=in_channels)\n",
+    "    netD_Y = Discriminator(in_channels=in_channels)\n",
+    "\n",
+    "    if adam:\n",
+    "        optimizerG = optim.Adam(\n",
+    "            params=list(netG_XtoY.parameters()) + list(netG_YtoX.parameters()),\n",
+    "            lr=lr,\n",
+    "            betas=(0.5, 0.999),\n",
+    "        )\n",
+    "        optimizerD_X = optim.Adam(\n",
+    "            params=netD_X.parameters(),\n",
+    "            lr=lr,\n",
+    "            betas=(0.5, 0.999),\n",
+    "        )\n",
+    "        optimizerD_Y = optim.Adam(\n",
+    "            params=netD_Y.parameters(),\n",
+    "            lr=lr,\n",
+    "            betas=(0.5, 0.999),\n",
+    "        )\n",
+    "\n",
+    "    elif SGD:\n",
+    "        optimizerG = optim.SGD(\n",
+    "            params=list(netG_XtoY.parameters()) + list(netG_YtoX.parameters()),\n",
+    "            lr=lr,\n",
+    "            momentum=0.95,\n",
+    "        )\n",
+    "        optimizerD_X = optim.SGD(params=netD_X.parameters(), lr=lr, momentum=0.95)\n",
+    "        optimizerD_Y = optim.SGD(params=netD_Y.parameters(), lr=lr, momentum=0.95)\n",
+    "\n",
+    "    try:\n",
+    "        dataloader = load_dataloader()\n",
+    "\n",
+    "    except Exception as e:\n",
+    "        print(\"An error occurred {}\".format(e))\n",
+    "\n",
+    "    cycle_loss = CycleLoss(reduction=\"mean\")\n",
+    "    grad_penalty = GradientPenalty(in_channels=in_channels, batch_size=1, device=device)\n",
+    "\n",
+    "    return {\n",
+    "        \"optimizerG\": optimizerG,\n",
+    "        \"optimizerD_X\": optimizerD_X,\n",
+    "        \"optimizerD_Y\": optimizerD_Y,\n",
+    "        \"netG_XtoY\": netG_XtoY,\n",
+    "        \"netG_YtoX\": netG_YtoX,\n",
+    "        \"netD_X\": netD_X,\n",
+    "        \"netD_Y\": netD_Y,\n",
+    "        \"cycle_loss\": cycle_loss,\n",
+    "        \"grad_penalty\": grad_penalty,\n",
+    "        \"train_dataloader\": dataloader[\"train_dataloader\"],\n",
+    "        \"test_dataloader\": dataloader[\"test_dataloader\"],\n",
+    "    }\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    device = torch.device(\"mps\" if torch.backends.mps.is_available() else \"cpu\")\n",
+    "\n",
+    "    init = helpers(\n",
+    "        lr=0.001,\n",
+    "        adam=True,\n",
+    "        SGD=False,\n",
+    "        in_channels=3,\n",
+    "        device=device,\n",
+    "    )\n",
+    "\n",
+    "    print(init[\"netG_XtoY\"])\n",
+    "    print(init[\"netG_YtoX\"])\n",
+    "\n",
+    "    print(init[\"netD_X\"])\n",
+    "    print(init[\"netD_Y\"])\n",
+    "\n",
+    "    print(init[\"optimizerG\"])\n",
+    "    print(init[\"optimizerD_X\"])\n",
+    "    print(init[\"optimizerD_Y\"])\n",
+    "\n",
+    "    print(init[\"train_dataloader\"])\n",
+    "    print(init[\"test_dataloader\"])\n",
+    "\n",
+    "    print(init[\"cycle_loss\"])\n",
+    "    print(init[\"grad_penalty\"])"
    ]
   }
  ],
