trainer code is updated #28

--- a/research/notebooks/ModelProtopying.ipynb
+++ b/research/notebooks/ModelProtopying.ipynb
@@ -820,6 +820,356 @@
     "    print(init[\"cycle_loss\"])\n",
     "    print(init[\"grad_penalty\"])"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Trainer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Trainer:\n",
+    "    def __init__(\n",
+    "        self,\n",
+    "        in_channels=3,\n",
+    "        epochs=500,\n",
+    "        lr=2e-3,\n",
+    "        num_critics=5,\n",
+    "        device=\"cuda\",\n",
+    "        adam=True,\n",
+    "        SGD=False,\n",
+    "        is_weight_init=True,\n",
+    "        is_display=True,\n",
+    "        lr_scheduler=False,\n",
+    "    ):\n",
+    "        self.in_channels = in_channels\n",
+    "        self.epochs = epochs\n",
+    "        self.lr = lr\n",
+    "        self.num_critics = num_critics\n",
+    "        self.device = device\n",
+    "        self.adam = adam\n",
+    "        self.SGD = SGD\n",
+    "        self.is_weight_init = is_weight_init\n",
+    "        self.is_display = is_display\n",
+    "        self.lr_scheduler = lr_scheduler\n",
+    "\n",
+    "        self.device = device_init(device=self.device)\n",
+    "\n",
+    "        self.init = helpers(\n",
+    "            in_channels=in_channels,\n",
+    "            lr=lr,\n",
+    "            adam=adam,\n",
+    "            SGD=SGD,\n",
+    "            device=device_init(device=device),\n",
+    "        )\n",
+    "\n",
+    "        self.netGX_toY = self.init[\"netG_XtoY\"].to(self.device)\n",
+    "        self.netGY_toX = self.init[\"netG_YtoX\"].to(self.device)\n",
+    "\n",
+    "        self.netD_X = self.init[\"netD_X\"].to(self.device)\n",
+    "        self.netD_Y = self.init[\"netD_Y\"].to(self.device)\n",
+    "\n",
+    "        self.optimizerG = self.init[\"optimizerG\"]\n",
+    "        self.optimizerD_X = self.init[\"optimizerD_X\"]\n",
+    "        self.optimizerD_Y = self.init[\"optimizerD_Y\"]\n",
+    "\n",
+    "        self.train_dataloader = self.init[\"train_dataloader\"]\n",
+    "        self.test_dataloader = self.init[\"test_dataloader\"]\n",
+    "\n",
+    "        self.cycle_loss = self.init[\"cycle_loss\"]\n",
+    "        self.grad_penalty = self.init[\"grad_penalty\"]\n",
+    "\n",
+    "        if self.is_weight_init:\n",
+    "            self.netGX_toY.apply(weight_init)\n",
+    "            self.netGY_toX.apply(weight_init)\n",
+    "            self.netD_X.apply(weight_init)\n",
+    "            self.netD_Y.apply(weight_init)\n",
+    "\n",
+    "        if self.lr_scheduler:\n",
+    "            self.schedulerG = StepLR(\n",
+    "                optimizer=self.optimizerG,\n",
+    "                step_size=20,\n",
+    "                gamma=0.5,\n",
+    "            )\n",
+    "            self.schedulerD_X = StepLR(\n",
+    "                optimizer=self.optimizerD_X,\n",
+    "                step_size=20,\n",
+    "                gamma=0.5,\n",
+    "            )\n",
+    "            self.schedulerD_Y = StepLR(\n",
+    "                optimizer=self.optimizerD_Y,\n",
+    "                step_size=20,\n",
+    "                gamma=0.5,\n",
+    "            )\n",
+    "\n",
+    "        try:\n",
+    "            self.config_files = config()\n",
+    "        except Exception as e:\n",
+    "            print(\"An Error occurred in the code:\", e)\n",
+    "        else:\n",
+    "            self.netG_XtoY_path = self.config_files[\"path\"][\"netG_XtoY_path\"]\n",
+    "            self.netG_YtoX_path = self.config_files[\"path\"][\"netG_YtoX_path\"]\n",
+    "            self.best_model_path = self.config_files[\"path\"][\"best_model_path\"]\n",
+    "            self.train_results = self.config_files[\"path\"][\"train_results\"]\n",
+    "            self.metrics_path = self.config_files[\"path\"][\"metrics_path\"]\n",
+    "\n",
+    "        self.loss = float(\"inf\")\n",
+    "\n",
+    "        self.total_netG_loss = []\n",
+    "        self.total_netD_X_loss = []\n",
+    "        self.total_netD_Y_loss = []\n",
+    "\n",
+    "        self.history = {\"netG_loss\": [], \"netD_X_loss\": [], \"netD_Y_loss\": []}\n",
+    "\n",
+    "    def l1(self, model):\n",
+    "        if isinstance(model, Generator):\n",
+    "            return sum(torch.norm(params, 1) for params in model.parameters())\n",
+    "\n",
+    "        else:\n",
+    "            raise ValueError(\"Model is not a Generator\".capitalize())\n",
+    "\n",
+    "    def l2(self, model):\n",
+    "        if isinstance(model, Generator):\n",
+    "            return sum(torch.norm(params, 2) for params in model.parameters())\n",
+    "\n",
+    "        else:\n",
+    "            raise ValueError(\"Model is not a Generator\".capitalize())\n",
+    "\n",
+    "    def elastic_net(self, model):\n",
+    "        if isinstance(model, Generator):\n",
+    "            return self.l1(model) + self.l2(model)\n",
+    "\n",
+    "        else:\n",
+    "            raise ValueError(\"Model is not a Generator\".capitalize())\n",
+    "\n",
+    "    def update_netG(self, **kwargs):\n",
+    "        self.optimizerG.zero_grad()\n",
+    "\n",
+    "        fake_y = self.netGX_toY(kwargs[\"X\"])\n",
+    "        fake_y_loss = -torch.mean(self.netD_Y(fake_y))\n",
+    "        reconstructed_X = self.netGY_toX(fake_y)\n",
+    "\n",
+    "        fake_x = self.netGY_toX(kwargs[\"y\"])\n",
+    "        fake_x_loss = -torch.mean(self.netD_X(fake_x))\n",
+    "        reconstructed_y = self.netGX_toY(fake_x)\n",
+    "\n",
+    "        total_W_loss = 1.0 * (fake_x_loss + fake_y_loss)\n",
+    "\n",
+    "        cycle_loss_X = self.cycle_loss(kwargs[\"X\"], reconstructed_X).mean()\n",
+    "        cycle_loss_y = self.cycle_loss(kwargs[\"y\"], reconstructed_y).mean()\n",
+    "\n",
+    "        total_cycle_loss = 10.0 * (cycle_loss_X + cycle_loss_y)\n",
+    "\n",
+    "        pixel_loss_X = torch.abs(fake_x - kwargs[\"X\"]).mean()\n",
+    "        pixel_loss_y = torch.abs(fake_y - kwargs[\"y\"]).mean()\n",
+    "\n",
+    "        total_content_loss = 10.0 * (pixel_loss_X + pixel_loss_y)\n",
+    "\n",
+    "        total_G_loss = total_W_loss + total_cycle_loss + total_content_loss\n",
+    "\n",
+    "        total_G_loss.backward()\n",
+    "        self.optimizerG.step()\n",
+    "\n",
+    "        return total_G_loss.item()\n",
+    "\n",
+    "    def update_netD_X(self, **kwargs):\n",
+    "        self.optimizerD_X.zero_grad()\n",
+    "\n",
+    "        fake_x = self.netGY_toX(kwargs[\"y\"]).detach()\n",
+    "        real_x_predict = self.netD_X(kwargs[\"X\"])\n",
+    "        fake_x_predict = self.netD_X(fake_x)\n",
+    "        grad_X_loss = self.grad_penalty(\n",
+    "            self.netD_X, kwargs[\"X\"], kwargs[\"y\"], device=self.device\n",
+    "        )\n",
+    "        netD_X_loss = (\n",
+    "            -torch.mean(real_x_predict)\n",
+    "            + torch.mean(fake_x_predict)\n",
+    "            + (10.0 * grad_X_loss)\n",
+    "        )\n",
+    "\n",
+    "        netD_X_loss.backward()\n",
+    "        self.optimizerD_X.step()\n",
+    "\n",
+    "        return netD_X_loss.item()\n",
+    "\n",
+    "    def update_netD_Y(self, **kwargs):\n",
+    "        self.optimizerD_Y.zero_grad()\n",
+    "\n",
+    "        fake_y = self.netGX_toY(kwargs[\"X\"]).detach()\n",
+    "        real_y_predict = self.netD_Y(kwargs[\"y\"])\n",
+    "        fake_y_predict = self.netD_Y(fake_y)\n",
+    "        grad_Y_loss = self.grad_penalty(\n",
+    "            self.netD_Y, kwargs[\"X\"], kwargs[\"y\"], device=self.device\n",
+    "        )\n",
+    "        netD_Y_loss = (\n",
+    "            -torch.mean(real_y_predict)\n",
+    "            + torch.mean(fake_y_predict)\n",
+    "            + (10.0 * grad_Y_loss)\n",
+    "        )\n",
+    "\n",
+    "        netD_Y_loss.backward()\n",
+    "        self.optimizerD_Y.step()\n",
+    "\n",
+    "        return netD_Y_loss.item()\n",
+    "\n",
+    "    def show_progress(self, **kwargs):\n",
+    "        if self.is_display:\n",
+    "            print(\n",
+    "                \"Epochs - [{}/{}] - netG_loss: {} - netD_X_loss: {} - netD_Y_loss: {}\".format(\n",
+    "                    kwargs[\"epoch\"],\n",
+    "                    self.epochs,\n",
+    "                    np.mean(kwargs[\"netG_loss\"]),\n",
+    "                    np.mean(kwargs[\"netD_X_loss\"]),\n",
+    "                    np.mean(kwargs[\"netD_Y_loss\"]),\n",
+    "                )\n",
+    "            )\n",
+    "        else:\n",
+    "            print(\n",
+    "                \"Epochs - [{}/{}] is completed\".format(\n",
+    "                    kwargs[\"epoch\"],\n",
+    "                    self.epochs,\n",
+    "                )\n",
+    "            )\n",
+    "\n",
+    "    def saved_checkpoints(self, **kwargs):\n",
+    "        if (\n",
+    "            os.path.exists(self.netG_XtoY_path)\n",
+    "            and os.path.exists(self.netG_YtoX_path)\n",
+    "            and os.path.exists(self.best_model_path)\n",
+    "        ):\n",
+    "            for filename, model, path in [\n",
+    "                (\"netG_XtoY\", self.netGX_toY, self.netG_XtoY_path),\n",
+    "                (\"netG_YtoX\", self.netGY_toX, self.netG_YtoX_path),\n",
+    "            ]:\n",
+    "                torch.save(\n",
+    "                    model.state_dict(),\n",
+    "                    os.path.join(path, \"{}{}.pth\".format(filename, kwargs[\"epoch\"])),\n",
+    "                )\n",
+    "\n",
+    "            if self.loss > kwargs[\"netG_loss\"]:\n",
+    "                self.loss = kwargs[\"netG_loss\"]\n",
+    "\n",
+    "                torch.save(\n",
+    "                    {\n",
+    "                        \"netG_XtoY\": self.netGX_toY.state_dict(),\n",
+    "                        \"netG_YtoX\": self.netGY_toX.state_dict(),\n",
+    "                        \"netG_loss\": kwargs[\"netG_loss\"],\n",
+    "                        \"epoch\": kwargs[\"epoch\"],\n",
+    "                    },\n",
+    "                    os.path.join(self.best_model_path, \"best_model.pth\"),\n",
+    "                )\n",
+    "\n",
+    "        else:\n",
+    "            raise Exception(\"Cannot save the model\")\n",
+    "\n",
+    "    def early_stopping(self):\n",
+    "        pass\n",
+    "\n",
+    "    def saved_training_results(self, **kwargs):\n",
+    "        X, y = next(iter(self.test_dataloader))\n",
+    "\n",
+    "        predict_y = self.netGX_toY(X.to(self.device))\n",
+    "        reconstructed_X = self.netGY_toX(predict_y.to(self.device))\n",
+    "\n",
+    "        for filename, samples in [\n",
+    "            (\"predict_y\", predict_y),\n",
+    "            (\"reconstructed_X\", reconstructed_X),\n",
+    "        ]:\n",
+    "            save_image(\n",
+    "                samples,\n",
+    "                os.path.join(\n",
+    "                    self.train_results, \"{}{}.png\".format(filename, kwargs[\"epoch\"])\n",
+    "                ),\n",
+    "                normalize=True,\n",
+    "                nrow=4,\n",
+    "            )\n",
+    "\n",
+    "    def train(self):\n",
+    "        for epoch in tqdm(range(self.epochs)):\n",
+    "            netG_loss = []\n",
+    "            netD_X_loss = []\n",
+    "            netD_Y_loss = []\n",
+    "\n",
+    "            for idx, (X, y) in enumerate(self.train_dataloader):\n",
+    "                X = X.to(self.device)\n",
+    "                y = y.to(self.device)\n",
+    "\n",
+    "                netD_X_loss.append(self.update_netD_X(X=X, y=y))\n",
+    "                netD_Y_loss.append(self.update_netD_Y(X=X, y=y))\n",
+    "\n",
+    "                if (idx + 1) % self.num_critics:\n",
+    "                    netG_loss.append(self.update_netG(X=X, y=y))\n",
+    "\n",
+    "            if self.lr_scheduler:\n",
+    "                self.schedulerG.step()\n",
+    "                self.schedulerD_X.step()\n",
+    "                self.schedulerD_Y.step()\n",
+    "\n",
+    "            self.show_progress(\n",
+    "                epoch=epoch + 1,\n",
+    "                netG_loss=netG_loss,\n",
+    "                netD_X_loss=netD_X_loss,\n",
+    "                netD_Y_loss=netD_Y_loss,\n",
+    "            )\n",
+    "\n",
+    "            self.saved_checkpoints(epoch=epoch + 1, netG_loss=np.mean(netG_loss))\n",
+    "\n",
+    "            if (epoch + 1) % 50:\n",
+    "                self.saved_training_results(epoch=epoch + 1)\n",
+    "\n",
+    "            self.total_netG_loss.append(np.mean(netG_loss))\n",
+    "            self.total_netD_X_loss.append(np.mean(netD_X_loss))\n",
+    "            self.total_netD_Y_loss.append(np.mean(netD_Y_loss))\n",
+    "\n",
+    "        self.history[\"netG_loss\"].extend(self.total_netG_loss)\n",
+    "        self.history[\"netD_X_loss\"].extend(self.total_netD_X_loss)\n",
+    "        self.history[\"netD_Y_loss\"].extend(self.total_netD_Y_loss)\n",
+    "\n",
+    "        for filename, file in self.history.items():\n",
+    "\n",
+    "            dump(\n",
+    "                value=file,\n",
+    "                filename=os.path.join(self.metrics_path, \"{}.pkl\".format(filename)),\n",
+    "            )\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def plot_history():\n",
+    "        config_files = config()\n",
+    "        metrics_path = config_files[\"path\"][\"metrics_path\"]\n",
+    "\n",
+    "        plt.figure(figsize=(20, 10))\n",
+    "\n",
+    "        if os.path.exists(metrics_path):\n",
+    "            history = load(os.path.join(metrics_path, \"history.pkl\"))\n",
+    "            for index, (filename, loss) in enumerate(\n",
+    "                [\n",
+    "                    (\"netG_loss\", history[\"netG_loss\"]),\n",
+    "                    (\"netD_X_loss\", history[\"netD_X_loss\"]),\n",
+    "                    (\"netD_Y_loss\", history[\"netD_Y_loss\"]),\n",
+    "                ]\n",
+    "            ):\n",
+    "                plt.subplot(1, 3, index + 1)\n",
+    "\n",
+    "                plt.plot(loss)\n",
+    "                plt.title(filename)\n",
+    "\n",
+    "                plt.xlabel(\"Epochs\")\n",
+    "                plt.ylabel(\"Loss\")\n",
+    "                plt.legend()\n",
+    "\n",
+    "            plt.tight_layout()\n",
+    "            plt.savefig(os.path.join(metrics_path, \"history.png\"))\n",
+    "            plt.show()\n",
+    "\n",
+    "        else:\n",
+    "            raise Exception(\"Cannot save the metrics\".capitalize())"
+   ]
   }
  ],
  "metadata": {
