test model is updated in nb #30

--- a/research/notebooks/ModelProtopying.ipynb
+++ b/research/notebooks/ModelProtopying.ipynb
@@ -1170,6 +1170,178 @@
     "        else:\n",
     "            raise Exception(\"Cannot save the metrics\".capitalize())"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Test Model\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class TestModel:\n",
+    "    def __init__(\n",
+    "        self,\n",
+    "        in_channels=3,\n",
+    "        dataloader=\"test\",\n",
+    "        best_model=True,\n",
+    "        XtoY=None,\n",
+    "        YtoX=None,\n",
+    "        device=\"cuda\",\n",
+    "        create_gif=False,\n",
+    "    ):\n",
+    "        self.in_channels = in_channels\n",
+    "        self.dataloader = dataloader\n",
+    "        self.best_model = best_model\n",
+    "        self.XtoY = XtoY\n",
+    "        self.YtoX = YtoX\n",
+    "        self.device = device_init(device=device)\n",
+    "        self.create_gif_images = create_gif\n",
+    "\n",
+    "        self.netG_XtoY = Generator(in_channels=3).to(self.device)\n",
+    "        self.netG_YtoX = Generator(in_channels=3).to(self.device)\n",
+    "\n",
+    "        self.config_files = config()\n",
+    "\n",
+    "    def select_best_model(self):\n",
+    "        if self.best_model:\n",
+    "            best_model_path = self.config_files[\"path\"][\"best_model_path\"]\n",
+    "            if os.path.exists(best_model_path):\n",
+    "                state_dict = torch.load(os.path.join(best_model_path, \"best_model.pth\"))\n",
+    "\n",
+    "                self.netG_XtoY.load_state_dict(state_dict[\"netG_XtoY\"])\n",
+    "                self.netG_YtoX.load_state_dict(state_dict[\"netG_YtoX\"])\n",
+    "\n",
+    "        else:\n",
+    "            if isinstance(self.XtoY, str) and isinstance(self.YtoX, str):\n",
+    "                state_XtoY = torch.load(self.XtoY)\n",
+    "                state_YtoX = torch.load(self.YtoX)\n",
+    "\n",
+    "                self.netG_XtoY.load_state_dict(state_XtoY[\"netG_XtoY\"])\n",
+    "                self.netG_YtoX.load_state_dict(state_YtoX[\"netG_YtoX\"])\n",
+    "\n",
+    "    def load_dataloader(self):\n",
+    "        if self.dataloader == \"test\":\n",
+    "            dataloader = load(\n",
+    "                filename=os.path.join(\n",
+    "                    self.config_files[\"path\"][\"processed_path\"], \"test_dataloader.pkl\"\n",
+    "                )\n",
+    "            )\n",
+    "        elif self.dataloader == \"train\":\n",
+    "            dataloader = load(\n",
+    "                filename=os.path.join(\n",
+    "                    self.config_files[\"path\"][\"processed_path\"], \"train_dataloader.pkl\"\n",
+    "                )\n",
+    "            )\n",
+    "        else:\n",
+    "            raise ValueError(\"Invalid dataloader\")\n",
+    "\n",
+    "        return dataloader\n",
+    "\n",
+    "    def normalize_image(self, image):\n",
+    "        return (image - image.min()) / (image.max() - image.min())\n",
+    "\n",
+    "    def plot(self, dataloader=None):\n",
+    "        if isinstance(dataloader, DataLoader):\n",
+    "            dataloader = dataloader\n",
+    "\n",
+    "            plt.figure(figsize=(10, 12))\n",
+    "\n",
+    "            X, y = next(iter(dataloader))\n",
+    "\n",
+    "            X = X.to(self.device)\n",
+    "            y = y.to(self.device)\n",
+    "\n",
+    "            predict_Y = self.netG_XtoY(X)\n",
+    "            reconstructed_X = self.netG_YtoX(predict_Y)\n",
+    "\n",
+    "            for index, image in enumerate(predict_Y):\n",
+    "                pred_y = image.squeeze().permute(1, 2, 0).cpu().detach().numpy()\n",
+    "                pred_y = self.normalize_image(pred_y)\n",
+    "\n",
+    "                revert_X = (\n",
+    "                    reconstructed_X[index]\n",
+    "                    .squeeze()\n",
+    "                    .permute(1, 2, 0)\n",
+    "                    .cpu()\n",
+    "                    .detach()\n",
+    "                    .numpy()\n",
+    "                )\n",
+    "                revert_X = self.normalize_image(revert_X)\n",
+    "\n",
+    "                real_X = X[index].permute(1, 2, 0).cpu().detach().numpy()\n",
+    "                real_X = self.normalize_image(real_X)\n",
+    "\n",
+    "                real_Y = y[index].permute(1, 2, 0).cpu().detach().numpy()\n",
+    "                real_Y = self.normalize_image(real_Y)\n",
+    "\n",
+    "                for idx, (title, image) in enumerate(\n",
+    "                    [\n",
+    "                        (\"real X\", real_X),\n",
+    "                        (\"pred Y\", pred_y),\n",
+    "                        (\"real Y\", real_Y),\n",
+    "                        (\"revert X\", revert_X),\n",
+    "                    ]\n",
+    "                ):\n",
+    "\n",
+    "                    plt.subplot(4 * 2, 4 * 2, 4 * index + (idx + 1))\n",
+    "                    plt.imshow(image)\n",
+    "                    plt.title(title)\n",
+    "                    plt.axis(\"off\")\n",
+    "\n",
+    "            plt.savefig(\n",
+    "                os.path.join(\n",
+    "                    self.config_files[\"path\"][\"test_result\"], \"test_result.jpeg\"\n",
+    "                )\n",
+    "            )\n",
+    "            print(\n",
+    "                \"Test images saved in the folder: \",\n",
+    "                self.config_files[\"path\"][\"test_result\"],\n",
+    "            )\n",
+    "            plt.show()\n",
+    "            plt.close()\n",
+    "\n",
+    "        else:\n",
+    "            raise ValueError(\"Invalid dataloader\".capitalize())\n",
+    "\n",
+    "    def create_gif(self):\n",
+    "        if self.create_gif_images:\n",
+    "            train_images = self.config_files[\"path\"][\"train_results\"]\n",
+    "            gif_path = self.config_files[\"path\"][\"gif_path\"]\n",
+    "            images = [\n",
+    "                imageio.imread(os.path.join(train_images, image))\n",
+    "                for image in os.listdir(train_images)\n",
+    "            ]\n",
+    "\n",
+    "            imageio.mimsave(os.path.join(gif_path, \"gif.gif\"), images, \"GIF\")\n",
+    "\n",
+    "        else:\n",
+    "            pass\n",
+    "\n",
+    "    def test(self):\n",
+    "        try:\n",
+    "            self.select_best_model()\n",
+    "        except Exception as e:\n",
+    "            print(f\"An error occurred while selecting the best model: {e}\")\n",
+    "            return\n",
+    "\n",
+    "        try:\n",
+    "            dataloader = self.load_dataloader()\n",
+    "        except Exception as e:\n",
+    "            print(f\"An error occurred while loading the dataloader: {e}\")\n",
+    "            return\n",
+    "\n",
+    "        try:\n",
+    "            self.plot(dataloader=dataloader)\n",
+    "        except Exception as e:\n",
+    "            print(f\"An error occurred while plotting: {e}\")\n",
+    "            return"
+   ]
   }
  ],
  "metadata": {
